[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solomon-protocol"
version = "0.1.0"
description = "Decentralized P2P indexing server"
authors = [{ name = "Ryan" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "chromadb",
    "trafilatura",
    "sentence-transformers",
    "scikit-learn",
    "httpx",
    "pydantic-settings"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
